feat: implemented new API to retrieve contract not signed from azure Storage
